--- a/stylesheets/responsive/_mobile.scss
+++ b/stylesheets/responsive/_mobile.scss
@@ -1129,8 +1129,7 @@
  * @author Arun Maxwell Jerry
  * New site responsive codes
  */
-
-
+    
 /* New Home page */
 
 .l-page{
@@ -1145,7 +1144,7 @@
     .fd-home-sticky,.fd-page-sticky{
       .site-nav{
         z-index: 1001;
-        position: absolute
+        position: absolute;
         top:40px;
         ul li{
           color: #333333;
