--- a/stylesheets/freshdesk_rtl.css
+++ b/stylesheets/freshdesk_rtl.css
@@ -32254,7 +32254,7 @@ div#usa {
   /* line 518, ../../source/assets/stylesheets/responsive/_tablet-desktop.scss */
 
   .company-logo-blocks .company-block img {
-    top: 35%;
+    vertical-align: middle;
     width: 80%;
   }
 
@@ -37334,7 +37334,7 @@ div#usa {
 
   /* line 1257, ../../source/assets/stylesheets/responsive/_mobile.scss */
 
-  .company-logo-blocks .company-block {
+  .home-customers .company-logo-blocks .company-block {
     width: 40%;
     height: 100px;
     /*@noflip*/
@@ -37343,14 +37343,14 @@ div#usa {
 
   /* line 1261, ../../source/assets/stylesheets/responsive/_mobile.scss */
 
-  .company-logo-blocks .company-block img {
-    top: 35%;
+  .home-customers .company-logo-blocks .company-block img {
+    vertical-align: middle;
     width: 80%;
   }
 
   /* line 1265, ../../source/assets/stylesheets/responsive/_mobile.scss */
 
-  .company-logo-blocks .company-block:after {
+  .home-customers .company-logo-blocks .company-block:after {
     display: none;
   }
 
