--- a/stylesheets/responsive/_mobile.scss
+++ b/stylesheets/responsive/_mobile.scss
@@ -1253,13 +1253,13 @@
   margin: 0 auto;
 }
 
-.company-logo-blocks{
+.home-customers .company-logo-blocks{
   .company-block{
     width: 40%;
     height: 100px;
     /*@noflip*/margin-left: 6%;
     img{
-      top: 35%;
+      vertical-align: middle;
       width: 80%;
     }
     &:after{ display: none; }
