--- a/stylesheets/page/_language.scss
+++ b/stylesheets/page/_language.scss
@@ -3,7 +3,7 @@
         display: none;
     }
     .fd-header .top-nav-strip li:nth-child(2){
-     border-left: none;   
+     border-left: none;
     }
 }
 
@@ -26,7 +26,7 @@
       padding-right: 10%;
       padding-left: 10%;
       font-weight: 200;
-      
+
       span{
         font-size: 25px;
       }
@@ -132,7 +132,7 @@
   #demo-form{
     .mkt-check .mktField{
       width:100%;
-      
+
       .mktInput{
         float: left;
         margin-right: 10px;
@@ -145,5 +145,12 @@
   }
   .home-tour-wrapper .home-tour .home-tour-content p{
     font-size: 30px;
+  }
+}
+.he{
+  .contactAddress{
+    .fg-4:first-of-type{
+       display:none;
+    }
   }
 }
