--- a/stylesheets/page/_common.scss
+++ b/stylesheets/page/_common.scss
@@ -682,3 +682,74 @@ img[src*="insight.adsrvr.org"]{
 .bottom-wrapper .fg-4{
     /*@replace: right*/ text-align: inherit;
 }
+
+#eu-cookie-policy-popop {
+  font-size: 14px;
+  display: none;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  z-index: 100;
+
+  a {
+    color: #3973e6;
+
+    &:hover {
+      color: #275dc7;
+    }
+  }
+
+  .popup-container {
+    display: inline-block;
+    border-radius: 5px;
+    background-color: #fff5d2;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.15);
+    border: solid 1px rgba(255, 187, 55, 0.4);
+    padding: 15px;
+    width: 100%;
+    box-sizing: border-box;
+  }
+
+  .options {
+    text-align: center;
+
+    .accept-cookies {
+      margin-top: 8px;
+	    cursor: pointer;
+	    border: none;
+	    outline: 0;
+	    border-radius: 3px;
+	    text-align: center;
+	    letter-spacing: 1px;
+	    text-transform: uppercase;
+	    display: inline-block;
+	    transition: background-color .15s ease-in;
+	    white-space: normal;
+	    color: #fff!important;
+	    vertical-align: bottom;
+	    background: #4d4d4d;
+	    padding: 7px 20px;
+	    font-size: .75rem;
+	    min-width: 100px;
+    }
+  }
+}
+
+@media only screen and (min-width: 60rem) {
+	#eu-cookie-policy-popop {
+	  bottom: 20px;
+
+	  .text {
+	    padding-left: 22px;
+	    width: 80%;
+	    float: left;
+	    box-sizing: border-box;
+	  }
+
+	  .options {
+	    width: 20%;
+	    display: inline-block;
+	  }
+	}
+
+}
